gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-transparent_unions.rs
#[repr(transparent)]
union OkButUnstableUnion { // { dg-error ".E0658." "" { target *-*-* } }
    field: u8,
    zst: (),
}

fn main() {}

